src/wasm-lib/kcl/src/parser/snapshots/kcl_lib__parser__parser_impl__snapshot_math_tests__a.snap
---
source: kcl/src/parser/parser_impl.rs
expression: actual
---
{
  "type": "BinaryExpression",
  "start": 0,
  "end": 5,
  "operator": "+",
  "left": {
    "type": "Literal",
    "type": "Literal",
    "start": 0,
    "end": 1,
    "value": 1,
    "raw": "1",
    "digest": null
  },
  "right": {
    "type": "Literal",
    "type": "Literal",
    "start": 4,
    "end": 5,
    "value": 2,
    "raw": "2",
    "digest": null
  },
  "digest": null
}
