src/wasm-lib/kcl/src/parser/snapshots/kcl_lib__parser__parser_impl__snapshot_math_tests__c.snap
---
source: kcl/src/parser/parser_impl.rs
expression: actual
---
{
  "type": "BinaryExpression",
  "start": 0,
  "end": 4,
  "operator": "-",
  "left": {
    "type": "Literal",
    "type": "Literal",
    "start": 0,
    "end": 1,
    "value": 1,
    "raw": "1",
    "digest": null
  },
  "right": {
    "type": "Literal",
    "type": "Literal",
    "start": 3,
    "end": 4,
    "value": 2,
    "raw": "2",
    "digest": null
  },
  "digest": null
}
