src/wasm-lib/kcl/src/parser/snapshots/kcl_lib__parser__parser_impl__snapshot_math_tests__e.snap
---
source: kcl/src/parser/parser_impl.rs
expression: actual
---
{
  "type": "BinaryExpression",
  "start": 0,
  "end": 11,
  "operator": "*",
  "left": {
    "type": "Literal",
    "type": "Literal",
    "start": 0,
    "end": 1,
    "value": 1,
    "raw": "1",
    "digest": null
  },
  "right": {
    "type": "BinaryExpression",
    "type": "BinaryExpression",
    "start": 6,
    "end": 11,
    "operator": "+",
    "left": {
      "type": "Literal",
      "type": "Literal",
      "start": 6,
      "end": 7,
      "value": 2,
      "raw": "2",
      "digest": null
    },
    "right": {
      "type": "Literal",
      "type": "Literal",
      "start": 10,
      "end": 11,
      "value": 3,
      "raw": "3",
      "digest": null
    },
    "digest": null
  },
  "digest": null
}
