src/wasm-lib/kcl/src/parser/snapshots/kcl_lib__parser__parser_impl__snapshot_math_tests__h.snap
---
source: kcl/src/parser/parser_impl.rs
expression: actual
---
{
  "type": "BinaryExpression",
  "start": 0,
  "end": 22,
  "operator": "*",
  "left": {
    "type": "Literal",
    "type": "Literal",
    "start": 0,
    "end": 1,
    "value": 1,
    "raw": "1",
    "digest": null
  },
  "right": {
    "type": "BinaryExpression",
    "type": "BinaryExpression",
    "start": 7,
    "end": 22,
    "operator": "+",
    "left": {
      "type": "BinaryExpression",
      "type": "BinaryExpression",
      "start": 7,
      "end": 18,
      "operator": "/",
      "left": {
        "type": "BinaryExpression",
        "type": "BinaryExpression",
        "start": 7,
        "end": 12,
        "operator": "+",
        "left": {
          "type": "Literal",
          "type": "Literal",
          "start": 7,
          "end": 8,
          "value": 2,
          "raw": "2",
          "digest": null
        },
        "right": {
          "type": "Literal",
          "type": "Literal",
          "start": 11,
          "end": 12,
          "value": 3,
          "raw": "3",
          "digest": null
        },
        "digest": null
      },
      "right": {
        "type": "Literal",
        "type": "Literal",
        "start": 17,
        "end": 18,
        "value": 4,
        "raw": "4",
        "digest": null
      },
      "digest": null
    },
    "right": {
      "type": "Literal",
      "type": "Literal",
      "start": 21,
      "end": 22,
      "value": 5,
      "raw": "5",
      "digest": null
    },
    "digest": null
  },
  "digest": null
}
