src/wasm-lib/kcl/src/parser/snapshots/kcl_lib__parser__parser_impl__snapshot_math_tests__j.snap
---
source: kcl/src/parser/parser_impl.rs
expression: actual
---
{
  "type": "BinaryExpression",
  "start": 0,
  "end": 44,
  "operator": "/",
  "left": {
    "type": "BinaryExpression",
    "type": "BinaryExpression",
    "start": 0,
    "end": 22,
    "operator": "*",
    "left": {
      "type": "BinaryExpression",
      "type": "BinaryExpression",
      "start": 0,
      "end": 18,
      "operator": "*",
      "left": {
        "type": "BinaryExpression",
        "type": "BinaryExpression",
        "start": 0,
        "end": 12,
        "operator": "*",
        "left": {
          "type": "Identifier",
          "type": "Identifier",
          "start": 0,
          "end": 8,
          "name": "distance",
          "digest": null
        },
        "right": {
          "type": "Identifier",
          "type": "Identifier",
          "start": 11,
          "end": 12,
          "name": "p",
          "digest": null
        },
        "digest": null
      },
      "right": {
        "type": "Identifier",
        "type": "Identifier",
        "start": 15,
        "end": 18,
        "name": "FOS",
        "digest": null
      },
      "digest": null
    },
    "right": {
      "type": "Literal",
      "type": "Literal",
      "start": 21,
      "end": 22,
      "value": 6,
      "raw": "6",
      "digest": null
    },
    "digest": null
  },
  "right": {
    "type": "BinaryExpression",
    "type": "BinaryExpression",
    "start": 26,
    "end": 44,
    "operator": "*",
    "left": {
      "type": "Identifier",
      "type": "Identifier",
      "start": 26,
      "end": 36,
      "name": "sigmaAllow",
      "digest": null
    },
    "right": {
      "type": "Identifier",
      "type": "Identifier",
      "start": 39,
      "end": 44,
      "name": "width",
      "digest": null
    },
    "digest": null
  },
  "digest": null
}
