src/wasm-lib/kcl/src/parser/snapshots/kcl_lib__parser__parser_impl__snapshot_math_tests__k.snap
---
source: kcl/src/parser/parser_impl.rs
expression: actual
---
{
  "type": "BinaryExpression",
  "start": 0,
  "end": 8,
  "operator": "+",
  "left": {
    "type": "Literal",
    "type": "Literal",
    "start": 0,
    "end": 1,
    "value": 2,
    "raw": "2",
    "digest": null
  },
  "right": {
    "type": "Literal",
    "type": "Literal",
    "start": 7,
    "end": 8,
    "value": 3,
    "raw": "3",
    "digest": null
  },
  "digest": null
}
