src/wasm-lib/kcl/src/parser/snapshots/kcl_lib__parser__parser_impl__snapshot_math_tests__l.snap
---
source: kcl/src/parser/parser_impl.rs
assertion_line: 3501
expression: actual
---
{
  "type": "BinaryExpression",
  "start": 0,
  "end": 7,
  "operator": "mod",
  "left": {
    "type": "Literal",
    "type": "Literal",
    "start": 0,
    "end": 1,
    "value": 2,
    "raw": "2"
  },
  "right": {
    "type": "Literal",
    "type": "Literal",
    "start": 6,
    "end": 7,
    "value": 3,
    "raw": "3"
  }
}
